# Skin-Lesion-Generation-Diffusion

./: LICENSE  README.md  Train Test Val (Top 3).ipynb  debug_diffusers.py  device_utils.py  diagnose_model.py  docker-compose.yml  download_dataset.py  download_models.py  example_download.py  fix_macos_mutex.sh  generate_batch_evaluation.py  generate_samples.py  intel_utils.py  main (archive).py  main.py  mps_utils.py  pyproject.toml  train_diffusion.py  training_config.py
CGan/: CGan.py  main.py
Exploration/: Metadata Explorer.ipynb
api/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  start.sh
api/checkpoints/cnn/: latest_checkpoint.pth  model_epoch_001.pth
api/checkpoints/cnn_cifar/: latest_checkpoint.pth  model_epoch_001.pth
api/checkpoints/cnn_cifar10/: latest_checkpoint.pth  model_epoch_001.pth
api/checkpoints/diffusion_cifar/: checkpoint_metadata.json
api/checkpoints/energy_cifar/: checkpoint_metadata.json  energy_cifar.pth  latest_checkpoint.pth
api/commands/: train_cnn.py  train_diffusion.py  train_energy.py  train_gan.py
api/help_lib/: __init__.py  checkpoints.py  data_loader.py  embeddings.py  evaluator.py  generator.py  model.py  neural_networks.py  probability.py  text_processing.py  trainer.py  utils.py
api/models/: __init__.py  bigram_model.py  cnn_models.py  energy_diffusion_models.py  gan_models.py  requests.py  responses.py
api/routers/: __init__.py  embedding.py  neural_networks.py  probability.py
app-streamlit/: Dockerfile  Home.py  README.md  README_GENERATION.md  requirements.txt
data/: __init__.py  data_loader.py  dataset.py  dataset_utils.py
dataset/: readme.txt
evaluation/: cnn_classifier.py  evaluate_generated.py
generate/: __init__.py  generate_all.py  generate_cgan.py  generate_cgan_prod.py  generate_diffusion.py  generate_diffusion_prod.py  generate_pb_diffusion.py  generate_prebuilt_diffusion.py  generate_prebuilt_diffusion_prod.py  generate_prebuilt_gan.py  generate_prebuilt_gan_prod.py
lora_weights/: README.md  adapter_config.json  adapter_model.safetensors
(+74 files in other folders)
